# SPECTR

./: CMakeLists.txt  DebugSPECTR.filtergraph  README.md  package.json
Code/: AnalogOscillator.hpp  LicenseVerifier.cpp  LicenseVerifier.hpp  PluginCommon.hpp  PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp  Voice.hpp  Wavetable.hpp  WavetableBuilder.cpp  WavetableBuilder.hpp  WavetableData.hpp  WavetableOscillator.hpp
Code/Synth/: Voice.hpp  WavetableBuilder.cpp  WavetableBuilder.hpp  WavetableData.hpp  WavetableOscillator.hpp
Code/UI/: ADSRDisplay.hpp  LookAndFeel.hpp  WavetableDisplay.hpp
Resources/: README.md  dropdown.js  index.html  keyboard.js  knob.js  main.js  nodeGraphEditor.js  oscTemplate.html  pluginSettings.js  public_key.pem  style.css  wtDisplay.js
